--- a/index.html
+++ b/index.html
@@ -498,6 +498,109 @@
     </div>
 
     <!--------------------------------- FEATURED CARS SECTION ----------------------------------------->
+    <section class="featured py-5" id="featured">
+      <div class="container">
+        <!-- SECTION TITLE -->
+        <div class="row mb-5">
+          <div
+            class="col d-flex flex-wrap text-uppercase justify-content-center"
+          >
+            <h1 class="font-weight-bold align-self-center mx-1">featured</h1>
+            <h1 class="section-title-special mx-1">cars</h1>
+          </div>
+        </div>
+        <div class="row">
+          <!-- Featured info column -->
+          <div class="col-10 mx-auto col-lg-6 featured-info my-3">
+            <!-- Single Item One -->
+            <div
+              class="featured-item my-3 d-flex p-2 text-capitalized align-items-baseline flex-wrap"
+            >
+              <span class="featured-icon mr-2">
+                <i class="fas fa-car"></i>
+              </span>
+              <h5 class="font-weight-bold mx-1">mercedes</h5>
+              <h5 class="mx-1">new model</h5>
+            </div>
+            <!-- Single Item Two -->
+            <div
+              class="featured-item my-3 d-flex p-2 text-capitalized align-items-baseline flex-wrap"
+            >
+              <span class="featured-icon mr-2">
+                <i class="fas fa-car"></i>
+              </span>
+              <h5 class="font-weight-bold mx-1">mercedes</h5>
+              <h5 class="mx-1">new model</h5>
+            </div>
+            <!-- Single Item Three -->
+            <div
+              class="featured-item my-3 d-flex p-2 text-capitalized align-items-baseline flex-wrap"
+            >
+              <span class="featured-icon mr-2">
+                <i class="fas fa-car"></i>
+              </span>
+              <h5 class="font-weight-bold mx-1">chevy</h5>
+              <h5 class="mx-1">new model</h5>
+            </div>
+            <!-- Single Item Four -->
+            <div
+              class="featured-item my-3 d-flex p-2 text-capitalized align-items-baseline flex-wrap"
+            >
+              <span class="featured-icon mr-2">
+                <i class="fas fa-car"></i>
+              </span>
+              <h5 class="font-weight-bold mx-1">ford</h5>
+              <h5 class="mx-1">new model</h5>
+            </div>
+            <!-- Single Item Four -->
+            <div
+              class="featured-item my-3 d-flex p-2 text-capitalized align-items-baseline flex-wrap"
+            >
+              <span class="featured-icon mr-2">
+                <i class="fas fa-car"></i>
+              </span>
+              <h5 class="font-weight-bold mx-1">BMW</h5>
+              <h5 class="mx-1">new model</h5>
+            </div>
+          </div>
+          <!-- Featured image column -->
+          <div
+            class="col-10 mx-auto col-lg-6 featured-img align-self-center my-3"
+          >
+            <!-- Image container -->
+            <div class="img-container">
+              <!-- The bootstrap class 'img-fluid' keeps the image in its parent container -->
+              <img
+                src="images/featured.jpg"
+                alt=""
+                class="img-fluid featured-photo"
+              />
+              <a href="" class="featured-link">
+                <i class="fas fa-search"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--------------------------------- FOOTER SECTION ----------------------------------------->
+    <div class="footer py-5">
+      <div class="footer-icons d-flex justify-content-around">
+        <a href="#" class="footer-icon">
+          <i class="fab fa-facebook"></i>
+        </a>
+      <a href="#" class="footer-icon">
+          <i class="fab fa-twitter"></i>
+        </a>
+      <a href="#" class="footer-icon">
+          <i class="fab fa-instagram"></i>
+        </a>
+      <a href="#" class="footer-icon">
+          <i class="fab fa-linkedin"></i>
+        </a>
+      </div>
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
