--- a/index.html
+++ b/index.html
@@ -187,20 +187,26 @@
 
         <div class="row mb-5">
           <div class="col-10 mx-auto col-md-12 d-flex justify-content-end">
-            <button class="btn btn-outline-secondary text-uppercase mx-1">
+            <button
+              class="btn btn-outline-secondary text-uppercase mx-1 filter-btn" data-filter="all"
+            >
               all
             </button>
-            <button class="btn btn-outline-secondary text-uppercase mx-1">
+            <button
+              class="btn btn-outline-secondary text-uppercase mx-1 filter-btn" data-filter="american"
+            >
               american
             </button>
-            <button class="btn btn-outline-secondary text-uppercase mx-1">
+            <button
+              class="btn btn-outline-secondary text-uppercase mx-1 filter-btn" data-filter="german"
+            >
               german
             </button>
           </div>
         </div>
 
         <!-- SETTING UP OUR CARS CARDS-->
-        <div class="row">
+        <div class="row inventory-container">
           <!-- SINGLE CAR CARD -->
           <div class="col-10 mx-auto my-3 col-md-6 col-lg-4">
             <div class="card car-card">
@@ -519,7 +525,7 @@
               <span class="featured-icon mr-2">
                 <i class="fas fa-car"></i>
               </span>
-              <h5 class="font-weight-bold mx-1">mercedes</h5>
+              <h5 class="font-weight-bold mx-1">Mercedes</h5>
               <h5 class="mx-1">new model</h5>
             </div>
             <!-- Single Item Two -->
@@ -529,7 +535,7 @@
               <span class="featured-icon mr-2">
                 <i class="fas fa-car"></i>
               </span>
-              <h5 class="font-weight-bold mx-1">mercedes</h5>
+              <h5 class="font-weight-bold mx-1">Mercedes</h5>
               <h5 class="mx-1">new model</h5>
             </div>
             <!-- Single Item Three -->
@@ -539,7 +545,7 @@
               <span class="featured-icon mr-2">
                 <i class="fas fa-car"></i>
               </span>
-              <h5 class="font-weight-bold mx-1">chevy</h5>
+              <h5 class="font-weight-bold mx-1">Chevy</h5>
               <h5 class="mx-1">new model</h5>
             </div>
             <!-- Single Item Four -->
@@ -549,7 +555,7 @@
               <span class="featured-icon mr-2">
                 <i class="fas fa-car"></i>
               </span>
-              <h5 class="font-weight-bold mx-1">ford</h5>
+              <h5 class="font-weight-bold mx-1">Ford</h5>
               <h5 class="mx-1">new model</h5>
             </div>
             <!-- Single Item Four -->
@@ -590,13 +596,13 @@
         <a href="#" class="footer-icon">
           <i class="fab fa-facebook"></i>
         </a>
-      <a href="#" class="footer-icon">
+        <a href="#" class="footer-icon">
           <i class="fab fa-twitter"></i>
         </a>
-      <a href="#" class="footer-icon">
+        <a href="#" class="footer-icon">
           <i class="fab fa-instagram"></i>
         </a>
-      <a href="#" class="footer-icon">
+        <a href="#" class="footer-icon">
           <i class="fab fa-linkedin"></i>
         </a>
       </div>
